<resources>
    <string name="app_name">Super Agent</string>
    <string name="super_agent_txt">Super Agent</string>
    <string name="atlas_txt">Atlas</string>
    <string name="app_logo">app_logo</string>
    <string name="txt_security_pin">Set your Security Pin</string>
    <string name="security_directions">To properly secure your funds, please set up a personal 4-digit security PIN. You\'ll need it for every transaction you\'ll make</string>
    <string name="_01010101010101010">01010101010101010</string>
    <string name="ng">NG</string>
    <string name="deposits">Deposits</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="transaction_history">Transaction History</string>
    <string name="support">Support</string>
    <string name="log_out">Log Out</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="credit">Credit</string>
    <string name="ghc">GHC</string>
    <string name="phone_no">Phone no.</string>
    <string name="deposit">Deposit</string>
    <string name="_0_00">0.00</string>
    <string name="_209_72">209.72</string>
    <string name="_234561020940832">234561020940832</string>
    <string name="email">Email</string>
    <string name="xxxxxxxxx">xxxxxxxxx</string>
    <string name="login">Login</string>
    <string name="xxxx">xxxx</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="set_pin">Set Pin</string>
    <string name="set_pin_image">Set Pin Image</string>
    <string name="_210_00">210.00</string>
    <string name="withdraw">Withdraw</string>
    <string name="enter_your_personal_security_pin_code">Enter your personal security PIN code.</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="name">Name</string>
    <string name="george_doe">George Doe</string>
    <string name="_233_989_433_8475">+233 989 433 8475</string>
    <string name="amount">Amount</string>
    <string name="cancel_transaction">Cancel Transaction</string>
    <string name="_150_00">150.00</string>
    <string name="continue_to_confirmation_code">Continue to Confirmation Code</string>
    <string name="back_to_home">Back to Home</string>
    <string name="transaction_went_smoothly_you_have_your_cash_nand_someone_else_has_their_credit_yippie">Transaction went smoothly. You have your cash\nand someone else has their credit. Yippie!!</string>
    <string name="withdawal_nsuccessful">Withdawal\nSuccessful</string>
</resources>