<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deposits.Deposit">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="0dp">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_unknown"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="0dp"
                app:cardCornerRadius="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/card_bckg"
                    android:scaleType="centerCrop"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jane_doe"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_marginTop="50dp"
                        android:layout_marginLeft="30dp"
                        android:textSize="13sp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit"
                        android:textSize="13sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_gravity="right"
                        android:layout_marginTop="50dp"
                        android:layout_marginRight="95dp"
                        android:layout_marginLeft="0dp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_234561020940832"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:layout_gravity="left"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_209_72"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="120dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="40dp"
                        android:textColor="@android:color/white"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ghc"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:layout_gravity="right"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="70dp"
                        android:layout_marginRight="10dp"/>

                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_deposit"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="16dp"
                android:text="@string/withdrawal"
                android:textColor="#4F4F4F"
                android:textSize="24sp"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_unknown"
                android:gravity="center_horizontal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtText_phone_no"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                app:boxBackgroundColor="#4F4F4F"
                app:startIconDrawable="@drawable/phone_no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_deposit">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_no"
                    android:textColorHint="#4F4F4F"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtText_amount"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                app:boxBackgroundColor="#4F4F4F"
                app:startIconDrawable="@drawable/amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtText_phone_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_210_00"
                    android:textColorHint="#4F4F4F"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_deposit"
                android:layout_width="301dp"
                android:layout_height="60dp"
                android:text="@string/withdraw"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/edtText_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp"
                app:cornerRadius="4dp"
                android:backgroundTint="@color/colorPrimary"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>